Exemplo de Aplicação/Nginx/03-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
  selector:
    app: nginx
