Exemplo de Aplicação/Nginx/05-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingress
  namespace: nginx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host('nginx.parnamirim.rn.gov.br')
      kind: Rule
      services:
        - name: nginx-service
          port: 80
  tls:
    secretName: nginx-tls
    domains:
      - main: nginx.parnamirim.rn.gov.br

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx
spec:
  tls:
  - hosts:
      - nginx.parnamirim.rn.gov.br
    secretName: nginx-tls
  rules:
  - host: nginx.parnamirim.rn.gov.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
